Added generator, downgraded java to version 8